objects/Expense_Authorization__c.object
<CustomObject>
    <fields>
        <fullName>Advisory_Event__c</fullName>
        <formula>Event_Registration__r.Advisory_Event__r.Name</formula>
        <label>Advisory Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Populated by trigger from related Meeting Budget G/L record.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Expense_Authorizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Expense Authorizations</relationshipLabel>
        <relationshipName>Expense_Authorizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Registration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Registration</label>
        <referenceTo>Event_Registration__c</referenceTo>
        <relationshipLabel>Expense Authorizations</relationshipLabel>
        <relationshipName>Expense_Authorizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expense_Authorization_Number__c</fullName>
        <displayFormat>EAN-{0}</displayFormat>
        <label>Expense Authorization Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Flight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accommodations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other, non-travel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Expense Authorization</label>
    <nameField>
        <label>Expense Authorization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Authorizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Description_is_Blank</fullName>
        <active>true</active>
        <description>If “Other, non-travel” is chosen as the Type, and Description is blank</description>
        <errorConditionFormula>AND(
    ISPICKVAL( Type__c , &quot;Other, non-travel&quot;),
    ISBLANK( Description__c )
)</errorConditionFormula>
        <errorMessage>You must indicate what the expense will cover, and why.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_is_Blank</fullName>
        <active>true</active>
        <description>Type is Blank</description>
        <errorConditionFormula>ISBLANK( TEXT( Type__c ) )</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>You must indicate a type of expense</errorMessage>
    </validationRules>
</CustomObject>